feat: Add header basic  structure

--- a/src/app/ui/organisms/header/header.html
+++ b/src/app/ui/organisms/header/header.html
@@ -1,1 +1,22 @@
-<header></header>
+<header>
+  <ul>
+    <li>
+      <hack-button icon="home" mode="transparent">Inicio</hack-button>
+    </li>
+    <li>
+      <hack-button icon="speaker" mode="transparent">Convocatoria</hack-button>
+    </li>
+    <li>
+      <hack-button icon="light-bulb" mode="transparent">Banco Proyectos</hack-button>
+    </li>
+    <li>
+      <hack-button icon="team" mode="transparent">Registro</hack-button>
+    </li>
+    <li>
+      <hack-button icon="star" mode="transparent">Patrocinadores</hack-button>
+    </li>
+    <li>
+      <hack-button icon="institution" mode="transparent">Comite</hack-button>
+    </li>
+  </ul>
+</header>
