--- a/src/app/ui/organisms/header/header.css
+++ b/src/app/ui/organisms/header/header.css
@@ -5,5 +5,15 @@
 
 header {
   width: 100%;
-  height: 80dvh;
+  height: 5.75rem;
+}
+ul {
+  padding: 1rem 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+hack-button {
+  --btn-color: var(--white);
 }
