--- a/src/app/ui/organisms/waves/waves.css
+++ b/src/app/ui/organisms/waves/waves.css
@@ -4,18 +4,16 @@
   --layer-3-fill-color: #618cbe;
   --layer-4-fill-color: var(--main);
 }
-.bg-container {
-  position: absolute;
-  z-index: -10;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
 
 .background {
+  position: fixed;
+  top: 0;
+  z-index: -10;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  transition: height 0.5s ease;
 }
+
 .background .layer path:not(.step-1) {
   visibility: hidden;
 }
