--- a/src/app/ui/pages/home/home.page.css
+++ b/src/app/ui/pages/home/home.page.css
@@ -2,12 +2,12 @@
   display: block;
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 5.75rem);
 }
 
 section {
   position: absolute;
-  top: 38%;
+  top: 45%;
   left: 50%;
   translate: -50% -50%;
   display: flex;
