feat: Add convocation page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,5 +2,6 @@
 <hack-waves></hack-waves>
 <main>
   <hack-home></hack-home>
+  <hack-convocation></hack-convocation>
   <div class="spacer"></div>
 </main>
