feat: Add project bank page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,5 +3,6 @@
 <main>
   <hack-home></hack-home>
   <hack-convocation></hack-convocation>
+  <hack-project-bank></hack-project-bank>
   <div class="spacer"></div>
 </main>
