feat: Add first step in registration page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,5 +4,6 @@
   <hack-home></hack-home>
   <hack-convocation></hack-convocation>
   <hack-project-bank></hack-project-bank>
+  <hack-register></hack-register>
   <div class="spacer"></div>
 </main>
