--- a/src/app/ui/atoms/button/button.html
+++ b/src/app/ui/atoms/button/button.html
@@ -1,4 +1,4 @@
-<button (click)="onclick.emit()" [type]="type" [disabled]="disabled" (focusin)="isFocused = true"
+<button (click)="Click.emit()" [type]="type" [disabled]="disabled" (focusin)="isFocused = true"
         (focusout)="isFocused = false">
   <hack-icon [icon]="icon"/>
   <hack-bold>
