--- a/src/app/ui/atoms/labeled-text/labeled-text.css
+++ b/src/app/ui/atoms/labeled-text/labeled-text.css
@@ -4,7 +4,11 @@
   align-items: center;
 }
 
-nog-icon {
+hack-icon {
   width: 1.75rem;
   height: 1.75rem;
+}
+
+hack-text:empty {
+  display: none;
 }
