--- a/src/app/ui/atoms/labeled-text/labeled-text.html
+++ b/src/app/ui/atoms/labeled-text/labeled-text.html
@@ -1,4 +1,4 @@
-<hack-icon [icon]="icon">
+<hack-icon [icon]="icon"/>
 <hack-text>
-  <ng-content></ng-content>
+<ng-content></ng-content>
 </hack-text>
