--- a/src/app/ui/pages/register/register.page.css
+++ b/src/app/ui/pages/register/register.page.css
@@ -6,10 +6,20 @@
 section {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   max-width: 90rem;
   width: 100%;
+  height: 100lvh;
 }
-
+section > * {
+  transition-property: translate, opacity;
+  transition: var(--trans-duration) var(--trans-easing);
+}
+section:not(.intersected) > * {
+  translate: 0 25%;
+  opacity: 0;
+  pointer-events: none;
+}
 hack-labeled-subtitle {
   color: var(--main);
 }
