Add deployment configuration and environment setup

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,8 @@
 <main>
   <hack-home></hack-home>
   <hack-convocation></hack-convocation>
-  <hack-project-bank></hack-project-bank>
   <hack-register></hack-register>
+  <hack-itinerary></hack-itinerary>
+  <hack-committee></hack-committee>
   <div class="spacer"></div>
 </main>
