--- a/src/app/ui/organisms/header/header.html
+++ b/src/app/ui/organisms/header/header.html
@@ -1,22 +1,19 @@
 <header>
   <ul>
     <li>
-      <hack-button icon="home" mode="transparent">Inicio</hack-button>
+      <hack-button icon="home" mode="transparent" (Click)="scrollToSection('hack-home')">Inicio</hack-button>
     </li>
     <li>
-      <hack-button icon="speaker" mode="transparent">Convocatoria</hack-button>
+      <hack-button icon="speaker" mode="transparent" (Click)="scrollToSection('hack-convocation')">Convocatoria</hack-button>
     </li>
     <li>
-      <hack-button icon="light-bulb" mode="transparent">Banco Proyectos</hack-button>
+      <hack-button icon="team" mode="transparent" (Click)="scrollToSection('hack-register')">Registro</hack-button>
     </li>
     <li>
-      <hack-button icon="team" mode="transparent">Registro</hack-button>
+      <hack-button icon="date" mode="transparent" (Click)="scrollToSection('hack-itinerary')">Itinerario</hack-button>
     </li>
     <li>
-      <hack-button icon="star" mode="transparent">Patrocinadores</hack-button>
-    </li>
-    <li>
-      <hack-button icon="institution" mode="transparent">Comite</hack-button>
+      <hack-button icon="institution" mode="transparent" (Click)="scrollToSection('hack-committee')">Comité</hack-button>
     </li>
   </ul>
 </header>
