--- a/src/app/ui/pages/home/home.page.html
+++ b/src/app/ui/pages/home/home.page.html
@@ -12,10 +12,10 @@
   <nav>
     <ul>
       <li>
-        <hack-button icon="team" mode="dark">Registra a tu equipo</hack-button>
+        <hack-button icon="team" mode="dark" (Click)="scrollToSection('hack-register')">Registra a tu equipo</hack-button>
       </li>
       <li>
-        <hack-button icon="light-bulb" mode="outlined">Ver Proyectos</hack-button>
+        <hack-button icon="speaker" mode="outlined" (Click)="scrollToSection('hack-convocation')">Ver Convocatoria</hack-button>
       </li>
     </ul>
   </nav>
