--- a/src/app/ui/pages/register/register.page.css
+++ b/src/app/ui/pages/register/register.page.css
@@ -5,34 +5,48 @@
 
 section {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   max-width: 90rem;
   width: 100%;
-  height: 100lvh;
+  min-height: 100vh;
+  padding: 2rem 1rem;
+  gap: 2rem;
 }
+
 section > * {
   transition-property: translate, opacity;
   transition: var(--trans-duration) var(--trans-easing);
 }
+
 section:not(.intersected) > * {
   translate: 0 25%;
   opacity: 0;
   pointer-events: none;
 }
+
 hack-labeled-subtitle {
   color: var(--main);
 }
 
-.right {
-  max-width: 39rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.75rem;
-  text-align: end;
-  align-items: end;
+hack-panel {
+  width: 100%;
+  max-width: 600px;
 }
 
-.right hack-button {
-  --btn-color: var(--main);
+/* DESKTOP */
+@media (min-width: 1024px) {
+  section {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100lvh;
+    padding: 2rem;
+    gap: 3rem;
+  }
+
+  hack-panel {
+    max-width: 700px;
+  }
 }
