--- a/src/app/ui/pages/register/ui/organisms/student-list/student-list.input.html
+++ b/src/app/ui/pages/register/ui/organisms/student-list/student-list.input.html
@@ -1,7 +1,10 @@
 <hack-gallery [options]="{centeredSlides:true}">
   @for (student of _students; track $index) {
     <div class="swiper-slide">
-      <hack-student-form-card [Student]="student"/>
+      <hack-student-form-card
+        [Student]="student"
+        (Remove)="RemoveStudent($event)"
+      />
     </div>
   }
 </hack-gallery>
