feat: correcciones texto, fecha, comités, Tehuipango y layout

--- a/src/app/ui/pages/committee/committee.page.html
+++ b/src/app/ui/pages/committee/committee.page.html
@@ -9,6 +9,8 @@
   <div class="content">
     <div class="institution">
       <hack-labeled-text icon="institution">Instituto Tecnológico Superior de Zongolica</hack-labeled-text>
+      <hack-text>Comité de LAGUNA HACK 2026</hack-text>
+      <hack-text>Comité de Emprendimiento e Innovación Tecnológica</hack-text>
       <hack-text>INGETEC</hack-text>
       <hack-text>Dirección General</hack-text>
       <hack-text>Subdirección Académica</hack-text>
