--- a/src/app/ui/pages/register/register.page.html
+++ b/src/app/ui/pages/register/register.page.html
@@ -1,6 +1,6 @@
 <section hackIntersectable TopMargin="-50%" BottomMargin="-50%">
   <hack-panel>
-    <hack-labeled-subtitle icon="team">Informacion del equipo</hack-labeled-subtitle>
+    <hack-labeled-subtitle icon="team">Información del equipo</hack-labeled-subtitle>
     <hack-team-info-form></hack-team-info-form>
   </hack-panel>
 </section>
