--- a/src/app/ui/pages/home/home.page.html
+++ b/src/app/ui/pages/home/home.page.html
@@ -1,12 +1,14 @@
 <section hackIntersectable>
   <figure>
     <img src="/images/laguna-hack.webp" alt="" />
+    <span class="date-label">05 DE MARZO DE 2026</span>
   </figure>
   <p>
     <hack-text>
-      Organizado por el Campus Nogales del Instituto Tecnológico Superior de Zongolica, Laguna Hack
-      2026 es el espacio ideal para crear soluciones reales, aprender en equipo y llevar tus ideas
-      al siguiente nivel.¡Regístrate y forma parte de la experiencia!
+      Desarrollar de manera colaborativa e intensiva, en un periodo de tiempo determinado de 10 horas,
+      una propuesta de solución a un desafío, problemática o área de oportunidad tomando como punto de
+      partida, los retos planteados para esta edición del evento; integrando de manera armónica tecnología
+      de vanguardia, metodologías interdisciplinares, creatividad e innovación.
     </hack-text>
   </p>
   <nav>
