--- a/src/app/ui/pages/convocation/convocation.page.html
+++ b/src/app/ui/pages/convocation/convocation.page.html
@@ -31,7 +31,7 @@
       <!-- ABRIR EN NUEVA VENTANA -->
       <a
         class="convocation-btn"
-        href="/docs/convocatoria.pdf"
+        href="/docs/CONVOCATORIA.pdf"
         target="_blank"
       >
         Ver en otra página
@@ -40,7 +40,7 @@
       <!-- DESCARGAR -->
       <a
         class="convocation-btn"
-        href="/docs/convocatoria.pdf"
+        href="/docs/CONVOCATORIA.pdf"
         download="Convocatoria-LagunaHack-2026.pdf"
       >
         Descargar
@@ -54,7 +54,7 @@
   <!-- ============ DERECHA (PDF) ============ -->
   <div class="right">
     <iframe
-      src="/docs/convocatoria.pdf"
+      src="/docs/CONVOCATORIA.pdf"
       class="pdf-viewer"
       title="Convocatoria Laguna Hack 2026"
     ></iframe>
