--- a/src/app/ui/pages/register/ui/organisms/team-info-form/team-info-form.html
+++ b/src/app/ui/pages/register/ui/organisms/team-info-form/team-info-form.html
@@ -1,4 +1,4 @@
-<form [formGroup]="_form" (ngSubmit)="onSubmit()">
+<form [formGroup]="_form" (ngSubmit)="onSubmit()" (keydown.enter)="$event.preventDefault()">
 
   <hack-input-label icon="team">
     <span text>Nombre del equipo</span>
