fix: notificar cambios al escribir en campos de integrantes

--- a/src/app/ui/pages/register/ui/organisms/student-list/student-list.input.html
+++ b/src/app/ui/pages/register/ui/organisms/student-list/student-list.input.html
@@ -3,6 +3,7 @@
     <div class="swiper-slide">
       <hack-student-form-card
         [Student]="student"
+        (Change)="onStudentChange()"
         (Remove)="RemoveStudent($event)"
       />
     </div>
